add search at article
