# docs/swagger.json
@@ -48,6 +48,12 @@
                         "description": "Language (default 'id')",
                         "name": "lang",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search keyword",
+                        "name": "search",
+                        "in": "query"
                     }
                 ],
                 "responses": {
